--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@ckeditor/ckeditor5-alignment": "^41.0.0",
     "@ckeditor/ckeditor5-build-classic": "^38.0.1",
     "@ckeditor/ckeditor5-react": "^6.0.0",
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@tanstack/react-query": "^4.3.4",
     "@testing-library/jest-dom": "^5.16.4",
